# ledger-sync

./: .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: ledger-sync.yaml
lib/: api.py  ledger_table.py  model.py
src/ledger_sync/: main.py
src/ledger_sync/lib/: api.py  model.py
src/lib/: ledger_table.py
src/ssl/: _.mara.gov.pem
tests/: test_ledger_table.py
