[project]
name = "ledger-sync"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "niquests>=3.18.6",
    "sqlalchemy>=2.0.49",
]
[project.scripts]
sync = "ledger_sync.main:main" 
[build-system]
requires = ["uv_build==0.11.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
