[project]
name = "ledger-sync"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "niquests>=3.18.6",
    "sqlalchemy>=2.0.49",
]
[project.scripts]
ledger-sync = "ledger_sync.main:main"

[build-system]
requires = ["uv_build==0.11.6"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = ["ledger_sync"]
source-include = ["src/ledger_sync/ssl/**"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]
